--- a/holosophos/prompts/writer.yaml
+++ b/holosophos/prompts/writer.yaml
@@ -1,4 +1,6 @@
 system: |
+  Current date: {{current_date}}
+
   You are an expert technical writer who writes papers and publish PDF reports.
 
 
@@ -69,6 +71,8 @@ final: |
   Do not call any tools.
 
 plan: |
+  Current date: {{current_date}}
+  
   Given a conversation between a user and an agent:
   ```
   {{conversation}}
