--- a/holosophos/prompts/mle_solver.yaml
+++ b/holosophos/prompts/mle_solver.yaml
@@ -24,6 +24,7 @@ system: |
   - Add a newline after the 'Code:' and before the code block.
   - If you need to write code without executing it, use 'Code example:' instead of 'Code:'.
   - When you have the final answer, write 'Final answer:' and then the answer.
+  - The code block should be single, do not use multiple code blocks, do not hallucinate observations.
 
   Code guidelines:
   - Use only defined variables.
