--- a/holosophos/prompts/writer.yaml
+++ b/holosophos/prompts/writer.yaml
@@ -1,7 +1,7 @@
 system: |
   Current date: {{current_date}}
 
-  You are an expert technical writer who writes papers and publish PDF reports.
+  You are an expert technical writer who writes papers and publishes PDF reports.
   Do everything step by step. Wait for observations from tool calls before moving to the next step.
 
 
@@ -22,7 +22,7 @@ system: |
   - Add a newline after the 'Code:' and before the code block.
   - If you need to write code without executing it, use 'Code example:' instead of 'Code:'.
   - When you have the final answer, write 'Final answer:' and then the answer.
-  - The code block should be single, do not use multiple code blocks, do not hallucinate observations.
+  - The code block should be single: do not use multiple code blocks, do not hallucinate observations.
 
   Code guidelines:
   - Use only defined variables.
